Revision history for Devel-Trace-Subs

0.12    2015-09-17
        - min perl ver required: 5.12

0.10    2015-09-15
        - moved repo from bitbucket to https://github.com/stevieb9/devel-trace-subs
        - requires Perl v5.10+
        - requires DES v1.31+

0.08    2015-09-15
        - added 'inject' param to install_trace(), allows custom code to be
          installed

0.07    2015-09-14
        - bumped DES req to v1.30

0.06    2015-09-14
        - install_trace() now uses DES->inject(inject_after_sub_def => [])
          instead of DES->inject_after()
        - modules no longer have to be loaded prior to install/remove,
          as a bug was fixed in DES
        - include/exclude parameters no longer are useful, all subs will
          be injected to

0.04    2015-09-13
        - install_trace() now accepts extensions => []

0.03    2015-09-13
        - updated sub regex to catch subs with open brace on next line
        - "" "" "" to catch subs with close brace on same line
        - "" "" "" to catch anon subs (but skip the one-liners)
        - updated install_trace() to call remove_trace() so that
          duplicate installs don't happen

0.02    2015-09-13
        - install_trace() added
        - remove_trace() added
        - renamed module from Devel::Trace::Flow to Devel::Trace::Subs

0.01    2015-09-10
        - initial version
